[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[dependencies]

[features]
default = []
full = [
    "types",
    "random_seed",
    "env_names",
    "solution_threshold",
    "pointer"
]
types = []
random_seed = ["types", "env_names"]
env_names = []
solution_threshold = ["env_names"]
pointer = []